# datalab

./: .gitignore  README.md
arrow/: README.md  benchmark.py  pyproject.toml
arrow/adbc_jsonb_handling/: main.py  pyproject.toml
arrow/ndjson/: README.md  example-schema.json  generate_jsonl.py  main.py  pyproject.toml  speedup_plot.py  speedup_plot2.py  speedup_plot3.py  validate_nested_json.py
arrow/zero-copy/: main.py
comet/: README.md  build-comet-image.sh  build-comet.sh  docker-compose.yml  job_no_comet.py  job_with_comet.py  main.py  pyproject.toml  start-pyspark-shell.sh  start-spark-shell.sh  submit-job.sh
datafusion/one-billion-rows/: Cargo.toml
datastructs/static-search-tree/: Cargo.toml  README.md
datastructs/suffix-array/: Cargo.toml  README.md  suffix_array.py
duckdb/: MIGRATION.md  README.md  duckdbstuff.py  ducklake.py  dummyduck.py  install_ducklake_postgresql.py  pyproject.toml
ducklake/: README.md
falkordb/: CHATGPT.md  COPILOT.md  README.md
grpc/: install-grpc.sh
iceberg/: LAKE.md  README.md  spark-shell.sh
iceberg/scd2/: Iceberg-SCD2.ipynb  README.md
kubernetes/: README.md  deploy-hello-node.sh  install-minikube.sh
kubernetes/typescript-test/: deployment.yml  (+5 more)
mlops/: README.md  model_summary.txt  pytorch_mnist.py  pytorch_mnist_hyperparameter_tuned.py  requirements.txt  sklearn_diabetes.py  system_metrics_test.py
podman/: README.md
postgresql/: NORMALIZATION.md  README.md  app.py  install.sh  logfile  query.py  requirements.txt  run.sh
spark/: PYSPARK.md  README.md  main.py  pyproject.toml
testcontainers/: SPARK.md
(+20 files in other folders)
